# tsukiyo

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: depoly-backend-cloud-run.yml  depoly-backend.yml  depoly-frontend.yml  test-backend.yml  test-frontend-size-change.yml  test-frontend.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod
backend/migrations/2021-01-16-113726_init/: down.sql  up.sql
backend/src/: cli.rs  dal.rs  db.rs  gql.rs  main.rs  redis.rs  schema.rs
backend/src/auth/: certs.rs  mod.rs
backend/src/contacts/: mod.rs  model.rs  service.rs
backend/src/events/: controller.rs  model.rs  service.rs
backend/src/gql/: controller.rs  mod.rs  schema.rs
backend/src/jwt/: mod.rs
backend/src/sql/: db.rs  schema.rs
backend/src/utils/: mod.rs
frontend/: .dockerIgnore  .eslintrc.js  .gitignore  App.vue  Dockerfile  gql.yml  index.css  index.html  jest.config.js  main.ts  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/admin/: AdminNav.vue  AdminViewTitle.vue  Console.vue  ContactList.vue  EditorLabel.vue  EventEditor.vue  EventList.vue  Login.vue  admin-store.ts  auth.ts
frontend/assets/: Thumbs.db  base.scss
frontend/components/: EventList.vue  Header.vue  Logo.vue
frontend/components/design/: Access.vue  Event.vue  FormItem.vue  Logo.vue  Main.vue  MainVisual.vue  Menu.vue  Nav.vue  RecommendItem.vue  SectionTitle.vue  Selector.vue  Sentence.vue  SubTitle.vue
frontend/e2e/plugins/: index.js
frontend/open/: Contact.vue  Event.vue  Home.spec.ts  Home.test.ts  Home.vue  NotFound.vue  Order.vue
frontend/open/404/: index.vue
frontend/open/Contact/: Success.vue  index.vue
frontend/open/Event/: EventItem.vue  (+1 more)
frontend/router/: index.ts
frontend/src/: App.vue
frontend/type/: gql.ts
frontend/utils/: auth.ts  index.ts  stroage.ts
nginx/: nginx.conf
(+14 files in other folders)
