[package]
name = "backend"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "3"
actix-cors = "0.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres","r2d2", "chrono"] }
serde = "1.0.119"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
redis = { version = "0.17.0", features = ["tokio-comp"] }
juniper = { git = "https://github.com/graphql-rust/juniper" }
