[package]
name = "backend"
version = "0.1.0"
authors = ["rainy-me <github@rainy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
actix-web = { version = "3", features = ["rustls"] }
actix-cors = "0.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres","r2d2", "chrono"] }
serde = "1.0.119"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
juniper = { git = "https://github.com/graphql-rust/juniper" }
jsonwebtoken = "7"
futures-util = { version = "0.3.7", default-features = false }
once_cell = "1.5.2"
openssl = "0.10"
validator = { version = "0.12", features = ["derive"] }